--- a/docker/Dockerfile-prod-opt
+++ b/docker/Dockerfile-prod-opt
@@ -7,6 +7,18 @@
 # hadolint global ignore=DL3013,DL3033,DL3041,SC1091
 # - DL3013, DL3033: ignore warnings about installing non-specific versions with microdnf or yum)
 # - SC1091: ignore warning about not being able to source the bashrc
+FROM almalinux:9.5 AS patches_stage
+ARG GITLAB_TOKEN_CORSIKA_OPT_PATCHES="token"
+ARG CORSIKA_VERSION="77550"
+
+RUN yum update -y && yum install -y git && \
+    yum clean all && \
+    rm -rf /var/cache/yum/* /tmp/* /var/tmp/*
+
+RUN git clone --depth 1 --branch initial-commit https://oauth2:$GITLAB_TOKEN_CORSIKA_OPT_PATCHES@gitlab.cta-observatory.org/cta-computing/dpps/simpipe/corsika-opt-patches.git && \
+    cp -rL corsika-opt-patches/build_opt/corsikaOptPatch-$CORSIKA_VERSION/ ./corsika-patches/ && \
+    rm -rf corsika-opt-patches
+
 FROM almalinux:9.5 AS build_image
 ARG BUILD_OPT="prod6-sc"
 ARG EXTRA_DEF="-DMAXIMUM_TELESCOPES=128"
@@ -17,7 +29,6 @@ ARG BERNLOHR_VERSION="1.68"
 ARG BUILD_BRANCH=main
 ARG PYTHON_VERSION=3.12
 ARG SIMTOOLS_REQUIREMENT="git+https://github.com/gammasim/simtools.git"
-ARG GITLAB_TOKEN_CORSIKA_OPT_PATCHES="token"
 
 ENV GCC_PATH="/usr/bin/"
 WORKDIR /workdir/sim_telarray
@@ -39,10 +50,7 @@ RUN cd /tmp && \
     cd / && rm -rf /tmp/autoconf-2.71*
 
 ADD corsika_simtelarray.tar.gz .
-# TODO - replace initial-commit branch with a specific tag / release
-RUN git clone --depth 1 --branch initial-commit  https://oauth2:$GITLAB_TOKEN_CORSIKA_OPT_PATCHES@gitlab.cta-observatory.org/cta-computing/dpps/simpipe/corsika-opt-patches.git && \
-    cp -rL corsika-opt-patches/build_opt/corsikaOptPatch-$CORSIKA_VERSION/ ./corsika-$CORSIKA_VERSION/ && \
-    rm -rf corsika-opt-patches
+COPY --from=patches_stage /corsika-patches ./corsika-$CORSIKA_VERSION/
 
 RUN tar -zxf corsika-$CORSIKA_VERSION.tar.gz && \
     tar -zxf bernlohr-$BERNLOHR_VERSION.tar.gz -C corsika-$CORSIKA_VERSION/bernlohr && \
