--- a/docker/Dockerfile-prod-opt
+++ b/docker/Dockerfile-prod-opt
@@ -10,12 +10,14 @@
 FROM almalinux:9.5 AS patches_stage
 ARG GITLAB_TOKEN_CORSIKA_OPT_PATCHES
 ARG CORSIKA_VERSION="77550"
+ARG CORSIKA_OPT_PATCH_VERSION="v1.0.0"
 
 RUN yum update -y && yum install -y git && \
     yum clean all && \
     rm -rf /var/cache/yum/* /tmp/* /var/tmp/*
 
-RUN git clone --depth 1 --branch initial-commit https://oauth2:$GITLAB_TOKEN_CORSIKA_OPT_PATCHES@gitlab.cta-observatory.org/cta-computing/dpps/simpipe/corsika-opt-patches.git && \
+RUN git config --global advice.detachedHead false && \
+    git clone --depth 1 --branch ${CORSIKA_OPT_PATCH_VERSION} https://oauth2:$GITLAB_TOKEN_CORSIKA_OPT_PATCHES@gitlab.cta-observatory.org/cta-computing/dpps/simpipe/corsika-opt-patches.git && \
     cp -rL corsika-opt-patches/build_opt/corsikaOptPatch-$CORSIKA_VERSION/ ./corsika-patches/ && \
     rm -rf corsika-opt-patches
 
@@ -29,6 +31,7 @@ ARG BERNLOHR_VERSION="1.68"
 ARG BUILD_BRANCH=main
 ARG PYTHON_VERSION=3.12
 ARG SIMTOOLS_REQUIREMENT="git+https://github.com/gammasim/simtools.git"
+ARG CORSIKA_OPT_PATCH_VERSION="v1.0.0"
 
 ENV GCC_PATH="/usr/bin/"
 WORKDIR /workdir/sim_telarray
@@ -133,6 +136,7 @@ RUN echo "build_opt: $BUILD_OPT" > ./build_opts.yml && \
     echo "hadronic_model: $HADRONIC_MODEL" >> ./build_opts.yml && \
     echo "avx_flag: $AVX_FLAG" >> ./build_opts.yml && \
     echo "corsika_version: $CORSIKA_VERSION" >> ./build_opts.yml && \
+    echo "corsika_opt_patch_version: $CORSIKA_OPT_PATCH_VERSION" >> ./build_opts.yml && \
     echo "bernlohr_version: $BERNLOHR_VERSION" >> ./build_opts.yml
 
 FROM almalinux:9.5-minimal
