--- a/docker/Dockerfile-prod-opt
+++ b/docker/Dockerfile-prod-opt
@@ -3,14 +3,28 @@
 # Contains CORSIKA (non-optimized / optimized), sim_telarray, and simtools
 # Requires CORSIKA and sim_telarray source code tarballs (plus tarball for
 # CORSIKA optimized build) to be in the same directory as this Dockerfile.
+
+# Shared build arguments
+ARG GITLAB_TOKEN_CORSIKA_OPT_PATCHES
+ARG CORSIKA_VERSION="77550"
+ARG CORSIKA_OPT_PATCH_VERSION="v1.0.0"
+ARG BUILD_OPT="prod6-sc"
+ARG EXTRA_DEF="-DMAXIMUM_TELESCOPES=128"
+ARG HADRONIC_MODEL="qgs2"
+ARG AVX_FLAG="avx2"
+ARG BERNLOHR_VERSION="1.68"
+ARG PYTHON_VERSION=3.12
+ARG BUILD_BRANCH=main
+ARG SIMTOOLS_REQUIREMENT="git+https://github.com/gammasim/simtools.git"
+
 #
 # hadolint global ignore=DL3013,DL3033,DL3041,SC1091
 # - DL3013, DL3033: ignore warnings about installing non-specific versions with microdnf or yum)
 # - SC1091: ignore warning about not being able to source the bashrc
 FROM almalinux:9.5 AS patches_stage
 ARG GITLAB_TOKEN_CORSIKA_OPT_PATCHES
-ARG CORSIKA_VERSION="77550"
-ARG CORSIKA_OPT_PATCH_VERSION="v1.0.0"
+ARG CORSIKA_VERSION
+ARG CORSIKA_OPT_PATCH_VERSION
 
 RUN yum update -y && yum install -y git && \
     yum clean all && \
@@ -22,16 +36,16 @@ RUN git config --global advice.detachedHead false && \
     rm -rf corsika-opt-patches
 
 FROM almalinux:9.5 AS build_image
-ARG BUILD_OPT="prod6-sc"
-ARG EXTRA_DEF="-DMAXIMUM_TELESCOPES=128"
-ARG HADRONIC_MODEL="qgs2"
-ARG AVX_FLAG="avx2"
-ARG CORSIKA_VERSION="77550"
-ARG BERNLOHR_VERSION="1.68"
-ARG BUILD_BRANCH=main
-ARG PYTHON_VERSION=3.12
-ARG SIMTOOLS_REQUIREMENT="git+https://github.com/gammasim/simtools.git"
-ARG CORSIKA_OPT_PATCH_VERSION="v1.0.0"
+ARG BUILD_OPT
+ARG EXTRA_DEF
+ARG HADRONIC_MODEL
+ARG AVX_FLAG
+ARG CORSIKA_VERSION
+ARG BERNLOHR_VERSION
+ARG BUILD_BRANCH
+ARG PYTHON_VERSION
+ARG SIMTOOLS_REQUIREMENT
+ARG CORSIKA_OPT_PATCH_VERSION
 
 ENV GCC_PATH="/usr/bin/"
 WORKDIR /workdir/sim_telarray
@@ -140,9 +154,9 @@ RUN echo "build_opt: $BUILD_OPT" > ./build_opts.yml && \
     echo "bernlohr_version: $BERNLOHR_VERSION" >> ./build_opts.yml
 
 FROM almalinux:9.5-minimal
-ARG BUILD_BRANCH=main
-ARG SIMTOOLS_REQUIREMENT="https://github.com/gammasim/simtools.git"
-ARG PYTHON_VERSION=3.12
+ARG BUILD_BRANCH
+ARG SIMTOOLS_REQUIREMENT
+ARG PYTHON_VERSION
 COPY --from=build_image /workdir/sim_telarray/ /workdir/sim_telarray/
 WORKDIR /workdir
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
