--- a/tests/integration_tests/config/simulate_prod_gamma_diffuse_20_deg_North_check_output.yml
+++ b/tests/integration_tests/config/simulate_prod_gamma_diffuse_20_deg_North_check_output.yml
@@ -28,7 +28,7 @@ CTA_SIMPIPE:
       - PATH_DESCRIPTOR: PACK_FOR_GRID_REGISTER
         FILE: gamma_diffuse_run000001_za20deg_azm180deg_North_alpha_6.0.0_check_output.log_hist.tar.gz
       - PATH_DESCRIPTOR: PACK_FOR_GRID_REGISTER
-        FILE: gamma_diffuse_run000001_za20deg_azm180deg_North_alpha_6.0.0_check_output.zst
+        FILE: gamma_diffuse_run000001_za20deg_azm180deg_North_alpha_6.0.0_check_output.simtel.zst
         EXPECTED_OUTPUT:
           trigger_time:
           - 0
