--- a/tests/integration_tests/config/simulate_prod_proton_20_deg_South_check_output.yml
+++ b/tests/integration_tests/config/simulate_prod_proton_20_deg_South_check_output.yml
@@ -26,7 +26,7 @@ CTA_SIMPIPE:
     INTEGRATION_TESTS:
     - TEST_OUTPUT_FILES:
       - PATH_DESCRIPTOR: PACK_FOR_GRID_REGISTER
-        FILE: proton_run000001_za20deg_azm180deg_South_alpha_6.0.0_check_output.zst
+        FILE: proton_run000001_za20deg_azm180deg_South_alpha_6.0.0_check_output.simtel.zst
         EXPECTED_OUTPUT:
           trigger_time:
           - 0
