fixed integratino test

--- a/tests/integration_tests/config/simulate_prod_gamma_20_deg_South_for_trigger_rates.yml
+++ b/tests/integration_tests/config/simulate_prod_gamma_20_deg_South_for_trigger_rates.yml
@@ -33,7 +33,7 @@ CTA_SIMPIPE:
 
         '
     - OUTPUT_FILE: log_files.txt
-    - OUTPUT_FILE: output_files.txt
+    - OUTPUT_FILE: simtel_output_files.txt
     - OUTPUT_FILE: hist_files.txt
 SCHEMA_NAME: application_workflow.metaschema
 SCHEMA_VERSION: 0.3.0
