--- a/tests/integration_tests/config/simulate_prod_gamma_20_deg_multiple_model_versions.yml
+++ b/tests/integration_tests/config/simulate_prod_gamma_20_deg_multiple_model_versions.yml
@@ -30,12 +30,12 @@ CTA_SIMPIPE:
       - PATH_DESCRIPTOR: PACK_FOR_GRID_REGISTER
         FILE: gamma_run000001_za20deg_azm180deg_South_alpha_6.0.0_multiple_model_versions.simtel.zst
       - PATH_DESCRIPTOR: PACK_FOR_GRID_REGISTER
-        FILE: gamma_run000001_za20deg_azm180deg_South_alpha_6.0.0_multiple_model_versions.event_data.hdf5
+        FILE: gamma_run000001_za20deg_azm180deg_South_alpha_6.0.0_multiple_model_versions.reduced_event_data.hdf5
       - PATH_DESCRIPTOR: PACK_FOR_GRID_REGISTER
         FILE: gamma_run000001_za20deg_azm180deg_South_alpha_6.1.0_multiple_model_versions.log_hist.tar.gz
       - PATH_DESCRIPTOR: PACK_FOR_GRID_REGISTER
         FILE: gamma_run000001_za20deg_azm180deg_South_alpha_6.1.0_multiple_model_versions.simtel.zst
       - PATH_DESCRIPTOR: PACK_FOR_GRID_REGISTER
-        FILE: gamma_run000001_za20deg_azm180deg_South_alpha_6.1.0_multiple_model_versions.event_data.hdf5
+        FILE: gamma_run000001_za20deg_azm180deg_South_alpha_6.1.0_multiple_model_versions.reduced_event_data.hdf5
 SCHEMA_NAME: application_workflow.metaschema
 SCHEMA_VERSION: 0.3.0
