--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,6 +29,7 @@ repos:
   - id: end-of-file-fixer
   - id: check-added-large-files
     args: ['--maxkb=500']
+  - id: check-json
 # https://github.com/HunterMcGushion/docstr_coverage
 - repo: https://github.com/HunterMcGushion/docstr_coverage
   rev: v2.3.2  # most recent docstr-coverage release or commit sha
