--- a/tests/integration_tests/config/calculate_trigger_rate_more_files.yml
+++ b/tests/integration_tests/config/calculate_trigger_rate_more_files.yml
@@ -5,8 +5,8 @@ CTA_SIMPIPE:
     TEST_NAME: more_files
     CONFIGURATION:
       SIMTEL_FILE_NAMES:
-      - ./tests/resources/proton_run201_za20deg_azm0deg_North_test_layout_test-prod.simtel.zst
-      - ./tests/resources/proton_run202_za20deg_azm0deg_North_test_layout_test-prod.simtel.zst
+      - ./tests/resources/proton_run000201_za20deg_azm000deg_North_alpha_6.0.0_test_file.simtel.zst
+      - ./tests/resources/proton_run000202_za20deg_azm000deg_North_alpha_6.0.0_test_file.simtel.zst
       SAVE_TABLES: true
       OUTPUT_PATH: simtools-output
     INTEGRATION_TESTS:
