--- a/tests/integration_tests/config/calculate_trigger_rate_one_file_save_table.yml
+++ b/tests/integration_tests/config/calculate_trigger_rate_one_file_save_table.yml
@@ -4,7 +4,7 @@ CTA_SIMPIPE:
   - APPLICATION: simtools-calculate-trigger-rate
     TEST_NAME: one_file_save_tables
     CONFIGURATION:
-      SIMTEL_FILE_NAMES: './tests/resources/proton_run201_za20deg_azm0deg_North_test_layout_test-prod.simtel.zst'
+      SIMTEL_FILE_NAMES: './tests/resources/proton_run000201_za20deg_azm000deg_North_alpha_6.0.0_test_file.simtel.zst'
       SAVE_TABLES: true
       OUTPUT_PATH: simtools-output
     INTEGRATION_TESTS:
