--- a/tests/integration_tests/config/generate_sim_telarray_histograms_hist_file_names_pdf_no_name.yml
+++ b/tests/integration_tests/config/generate_sim_telarray_histograms_hist_file_names_pdf_no_name.yml
@@ -4,12 +4,12 @@ CTA_SIMPIPE:
   - APPLICATION: simtools-generate-sim-telarray-histograms
     TEST_NAME: hist_file_names_pdf_no_name
     CONFIGURATION:
-      HIST_FILE_NAMES: './tests/resources/proton_run201_za20deg_azm0deg_North_test_layout_test-prod.simtel.zst'
+      HIST_FILE_NAMES: './tests/resources/proton_run000201_za20deg_azm000deg_North_alpha_6.0.0_test_file.simtel.zst'
       PDF: true
       OUTPUT_PATH: simtools-output
       TEST: true
       USE_PLAIN_OUTPUT_PATH: true
     INTEGRATION_TESTS:
-    - OUTPUT_FILE: proton_run201_za20deg_azm0deg_North_test_layout_test-prod.simtel.zst.pdf
+    - OUTPUT_FILE: proton_run000201_za20deg_azm000deg_North_alpha_6.0.0_test_file.simtel.zst.pdf
 SCHEMA_NAME: application_workflow.metaschema
 SCHEMA_VERSION: 0.3.0
