--- a/tests/integration_tests/config/generate_sim_telarray_histograms_hist_more_file_names.yml
+++ b/tests/integration_tests/config/generate_sim_telarray_histograms_hist_more_file_names.yml
@@ -5,8 +5,8 @@ CTA_SIMPIPE:
     TEST_NAME: hist_more_file_names
     CONFIGURATION:
       HIST_FILE_NAMES:
-      - ./tests/resources/proton_run201_za20deg_azm0deg_North_test_layout_test-prod.simtel.zst
-      - ./tests/resources/proton_run201_za20deg_azm0deg_North_test_layout_test-prod.simtel.zst
+      - ./tests/resources/proton_run000201_za20deg_azm000deg_North_alpha_6.0.0_test_file.simtel.zst
+      - ./tests/resources/proton_run000201_za20deg_azm000deg_North_alpha_6.0.0_test_file.simtel.zst
       PDF: true
       OUTPUT_FILE_NAME: test_simtel_hist_name
       OUTPUT_PATH: simtools-output
