--- a/tests/resources/production_event_data_fits_files.yml
+++ b/tests/resources/production_event_data_fits_files.yml
@@ -1,3 +1,3 @@
 ---
 files:
-  - "tests/resources/run202_202_proton_za20deg_azm0deg_North_test_layout_test-prod.simtel.fits.gz"
+  - "tests/resources/proton_za20deg_azm000deg_North_alpha_6.0.0_reduced_event_data.fits.gz"
