--- a/tests/resources/production_layouts_telescope_ids.yml
+++ b/tests/resources/production_layouts_telescope_ids.yml
@@ -1,5 +1,5 @@
 ---
 telescope_configs:
-  full: []
-  LST 1: [1]
-  LST 1-4 MST 1-15: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]
+  hyper_array: []
+  1lst: [LSTN-01]
+  alpha: [LSTN-01, LSTN-02, LSTN-03, LSTN-04, MSTN-01, MSTN-02, MSTN-03, MSTN-04, MSTN-05, MSTN-06, MSTN-07, MSTN-08, MSTN-09, MSTN-10, MSTN-11, MSTN-12, MSTN-13, MSTN-14, MSTN-15]
