--- a/tests/resources/plot_table_data/plot_lightguide_efficiency_vs_incidence_angle_parameter.yml
+++ b/tests/resources/plot_table_data/plot_lightguide_efficiency_vs_incidence_angle_parameter.yml
@@ -9,14 +9,14 @@ CTA_SIMPIPE:
     TABLES:
       - PARAMETER: lightguide_efficiency_vs_incidence_angle
         TELESCOPE: LSTN-01
-        SITE: NORTH
+        SITE: North
         MODEL_VERSION: 6.0.0
         LABEL: 'LSTN-01'
         COLUMN_X: 'angle'
         COLUMN_Y: 'efficiency'
       - PARAMETER: lightguide_efficiency_vs_incidence_angle
         TELESCOPE: LSTN-02
-        SITE: NORTH
+        SITE: North
         MODEL_VERSION: 6.0.0
         LABEL: 'LSTN-02'
         COLUMN_X: 'angle'
