--- a/tests/resources/plot_table_data/plot_fadc_pulse_shape_parameter.yml
+++ b/tests/resources/plot_table_data/plot_fadc_pulse_shape_parameter.yml
@@ -53,14 +53,14 @@ CTA_SIMPIPE:
         NORMALIZE_Y: true
       - PARAMETER: fadc_pulse_shape
         TELESCOPE: MSTx-FlashCam
-        SITE: SOUTH
+        SITE: South
         MODEL_VERSION: 6.0.0
         LABEL: 'MSTS'
         COLUMN_X: 'time'
         COLUMN_Y: 'amplitude'
       - PARAMETER: fadc_pulse_shape
         TELESCOPE: SSTS-design
-        SITE: SOUTH
+        SITE: South
         MODEL_VERSION: 6.0.0
         LABEL: 'SSTS'
         COLUMN_X: 'time'
