--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,6 +100,7 @@ scripts.simtools-generate-simtel-event-data = "simtools.applications.generate_si
 scripts.simtools-merge-tables = "simtools.applications.merge_tables:main"
 scripts.simtools-plot-array-layout = "simtools.applications.plot_array_layout:main"
 scripts.simtools-plot-tabular-data = "simtools.applications.plot_tabular_data:main"
+scripts.simtools-plot-tabular-data-for-model-parameter = "simtools.applications.plot_tabular_data_for_model_parameter:main"
 scripts.simtools-print-version = "simtools.applications.print_version:main"
 scripts.simtools-production-derive-corsika-limits = "simtools.applications.production_derive_corsika_limits:main"
 scripts.simtools-production-derive-statistics = "simtools.applications.production_derive_statistics:main"
