--- a/tests/integration_tests/config/calculate_trigger_rate_file_list.yml
+++ b/tests/integration_tests/config/calculate_trigger_rate_file_list.yml
@@ -5,7 +5,8 @@ CTA_SIMPIPE:
     TEST_NAME: file_list
     CONFIGURATION:
       SIMTEL_FILE_NAMES:
-      - ./tests/resources/simtel_output_files.txt
+      - ./tests/resources/proton_run000201_za20deg_azm000deg_North_alpha_6.0.0_test_file.simtel.zst
+      - ./tests/resources/proton_run000202_za20deg_azm000deg_North_alpha_6.0.0_test_file.simtel.zst
       SAVE_TABLES: true
       OUTPUT_PATH: simtools-output
     INTEGRATION_TESTS:
