--- a/tests/integration_tests/config/generate_sim_telarray_histograms_file_lists.yml
+++ b/tests/integration_tests/config/generate_sim_telarray_histograms_file_lists.yml
@@ -4,7 +4,9 @@ CTA_SIMPIPE:
   - APPLICATION: simtools-generate-sim-telarray-histograms
     TEST_NAME: hist_file_list
     CONFIGURATION:
-      HIST_FILE_NAMES: ./tests/resources/simtel_output_files.txt
+      HIST_FILE_NAMES:
+      - ./tests/resources/proton_run000201_za20deg_azm000deg_North_alpha_6.0.0_test_file.simtel.zst
+      - ./tests/resources/proton_run000202_za20deg_azm000deg_North_alpha_6.0.0_test_file.simtel.zst
       PDF: true
       OUTPUT_FILE_NAME: test_simtel_hist_name
       OUTPUT_PATH: simtools-output
