--- a/tests/integration_tests/config/production_derive_corsika_limits_hdf5_db_arrays.yml
+++ b/tests/integration_tests/config/production_derive_corsika_limits_hdf5_db_arrays.yml
@@ -2,9 +2,10 @@
 CTA_SIMPIPE:
   APPLICATIONS:
   - APPLICATION: simtools-production-derive-corsika-limits
-    TEST_NAME: hdf5
+    TEST_NAME: hdf5_arrays_from_db
     CONFIGURATION:
-      EVENT_DATA_FILES: tests/resources/production_event_data_hdf5_files.yml
+      EVENT_DATA_FILES:
+      - tests/resources/proton_za20deg_azm000deg_North_alpha_6.0.0_reduced_event_data.hdf5
       LOSS_FRACTION: 1.e-3
       MODEL_VERSION: 6.0.0
       SITE: North
