--- a/tests/integration_tests/config/merge_tables_one_fits.yml
+++ b/tests/integration_tests/config/merge_tables_one_fits.yml
@@ -4,7 +4,7 @@ CTA_SIMPIPE:
   - APPLICATION: simtools-merge-tables
     TEST_NAME: one_fits
     CONFIGURATION:
-      INPUT: tests/resources/proton_za20deg_azm000deg_North_alpha_6.0.0_reduced_event_data.fits.gz
+      INPUT_FILES: tests/resources/proton_za20deg_azm000deg_North_alpha_6.0.0_reduced_event_data.fits.gz
       TABLE_NAMES:
       - SHOWERS
       - TRIGGERS
