--- a/tests/resources/plot_single_pe_config_data.yml
+++ b/tests/resources/plot_single_pe_config_data.yml
@@ -1,17 +1,17 @@
 ---
-CTA_SIMPIPE:
-  PLOT:
-    TYPE: single_pe
-    TITLE: 'Single p.e. response'
-    XTITLE: 'Amplitude'
-    YTITLE: 'Response'
-    XSCALE: 'linear'
-    YSCALE: 'log'
-    XLIM: [0., 40.]
-    YLIM: [1.e-11, null]
-    TABLES:
-      - FILE_NAME: tests/resources/SinglePhe_spectrum_totalfit_19pixel-average_20200601.csv
-        TYPE: "legacy_lst_single_pe"
-        LABEL: 'LST-legacy'
-        COLUMN_X: 'amplitude'
-        COLUMN_Y: 'response'
+cta_simpipe:
+  plot:
+    type: single_pe
+    title: 'Single p.e. response'
+    xtitle: 'Amplitude'
+    ytitle: 'Response'
+    xscale: 'linear'
+    yscale: 'log'
+    xlim: [0., 40.]
+    ylim: [1.e-11, null]
+    tables:
+      - file_name: tests/resources/SinglePhe_spectrum_totalfit_19pixel-average_20200601.csv
+        type: "legacy_lst_single_pe"
+        label: 'LST-legacy'
+        column_x: 'amplitude'
+        column_y: 'response'
