--- a/tests/integration_tests/config/simulate_prod_gamma_20_deg_South_check_output.yml
+++ b/tests/integration_tests/config/simulate_prod_gamma_20_deg_South_check_output.yml
@@ -23,7 +23,7 @@ applications:
   integration_tests:
   - test_output_files:
     - file: gamma_run000001_za20deg_azm180deg_South_alpha_6.0.0_check_output.log_hist.tar.gz
-      path_descriptor: PACK_FOR_GRID_REGISTER
+      path_descriptor: pack_for_grid_register
     - expected_output:
         pe_sum:
         - 20
@@ -35,7 +35,7 @@ applications:
         - 0
         - 50
       file: gamma_run000001_za20deg_azm180deg_South_alpha_6.0.0_check_output.simtel.zst
-      path_descriptor: PACK_FOR_GRID_REGISTER
+      path_descriptor: pack_for_grid_register
   test_name: gamma_20_deg_south_check_output
 schema_name: application_workflow.metaschema
 schema_version: 0.4.0
