--- a/tests/integration_tests/config/simulate_prod_gamma_20_deg_South_pack_for_grid.yml
+++ b/tests/integration_tests/config/simulate_prod_gamma_20_deg_South_pack_for_grid.yml
@@ -22,9 +22,9 @@ applications:
   integration_tests:
   - test_output_files:
     - file: gamma_run000010_za20deg_azm000deg_South_test_layout_6.0.0_test-production-South-pack-for-grid.log_hist.tar.gz
-      path_descriptor: PACK_FOR_GRID_REGISTER
+      path_descriptor: pack_for_grid_register
     - file: gamma_run000010_za20deg_azm000deg_South_test_layout_6.0.0_test-production-South-pack-for-grid.simtel.zst
-      path_descriptor: PACK_FOR_GRID_REGISTER
+      path_descriptor: pack_for_grid_register
   test_name: gamma_20_deg_south_pack_for_grid
 schema_name: application_workflow.metaschema
 schema_version: 0.4.0
