--- a/tests/integration_tests/config/simulate_prod_gamma_20_deg_multiple_model_versions.yml
+++ b/tests/integration_tests/config/simulate_prod_gamma_20_deg_multiple_model_versions.yml
@@ -26,17 +26,17 @@ applications:
   integration_tests:
   - test_output_files:
     - file: gamma_run000001_za20deg_azm180deg_South_alpha_6.0.0_multiple_model_versions.log_hist.tar.gz
-      path_descriptor: PACK_FOR_GRID_REGISTER
+      path_descriptor: pack_for_grid_register
     - file: gamma_run000001_za20deg_azm180deg_South_alpha_6.0.0_multiple_model_versions.simtel.zst
-      path_descriptor: PACK_FOR_GRID_REGISTER
+      path_descriptor: pack_for_grid_register
     - file: gamma_run000001_za20deg_azm180deg_South_alpha_6.0.0_multiple_model_versions.reduced_event_data.hdf5
-      path_descriptor: PACK_FOR_GRID_REGISTER
+      path_descriptor: pack_for_grid_register
     - file: gamma_run000001_za20deg_azm180deg_South_alpha_6.1.0_multiple_model_versions.log_hist.tar.gz
-      path_descriptor: PACK_FOR_GRID_REGISTER
+      path_descriptor: pack_for_grid_register
     - file: gamma_run000001_za20deg_azm180deg_South_alpha_6.1.0_multiple_model_versions.simtel.zst
-      path_descriptor: PACK_FOR_GRID_REGISTER
+      path_descriptor: pack_for_grid_register
     - file: gamma_run000001_za20deg_azm180deg_South_alpha_6.1.0_multiple_model_versions.reduced_event_data.hdf5
-      path_descriptor: PACK_FOR_GRID_REGISTER
+      path_descriptor: pack_for_grid_register
   test_name: gamma_20_deg_multiple_model_versions
 schema_name: application_workflow.metaschema
 schema_version: 0.4.0
