--- a/tests/integration_tests/config/simulate_prod_gamma_40_deg_South_check_output.yml
+++ b/tests/integration_tests/config/simulate_prod_gamma_40_deg_South_check_output.yml
@@ -23,7 +23,7 @@ applications:
   integration_tests:
   - test_output_files:
     - file: gamma_run000001_za40deg_azm180deg_South_beta_6.0.0_check_output.log_hist.tar.gz
-      path_descriptor: PACK_FOR_GRID_REGISTER
+      path_descriptor: pack_for_grid_register
     - expected_output:
         pe_sum:
         - 20
@@ -35,7 +35,7 @@ applications:
         - 0
         - 50
       file: gamma_run000001_za40deg_azm180deg_South_beta_6.0.0_check_output.simtel.zst
-      path_descriptor: PACK_FOR_GRID_REGISTER
+      path_descriptor: pack_for_grid_register
   - test_simtel_cfg_files:
       5.0.0: tests/resources/sim_telarray_configurations/CTA-South-LSTS-01-5.0.0_test.cfg
       6.0.0: tests/resources/sim_telarray_configurations/CTA-South-LSTS-01-6.0.0_test.cfg
