--- a/tests/integration_tests/config/plot_tabular_data_for_model_parameter_fadc_pulse_shape.yml
+++ b/tests/integration_tests/config/plot_tabular_data_for_model_parameter_fadc_pulse_shape.yml
@@ -1,17 +1,16 @@
 ---
-CTA_SIMPIPE:
-  APPLICATIONS:
-  - APPLICATION: simtools-plot-tabular-data-for-model-parameter
-    TEST_NAME: fadc_pulse_shape
-    CONFIGURATION:
-      PARAMETER: fadc_pulse_shape
-      PARAMETER_VERSION: 1.0.0
-      SITE: North
-      TELESCOPE: LSTN-design
-      PLOT_TYPE: all
-      OUTPUT_PATH: simtools-output
-      USE_PLAIN_OUTPUT_PATH: true
-    INTEGRATION_TESTS:
-    - OUTPUT_FILE: fadc_pulse_shape_1.0.0_North_LSTN-design.pdf
-SCHEMA_NAME: application_workflow.metaschema
-SCHEMA_VERSION: 0.3.0
+applications:
+- application: simtools-plot-tabular-data-for-model-parameter
+  configuration:
+    output_path: simtools-output
+    parameter: fadc_pulse_shape
+    parameter_version: 1.0.0
+    plot_type: all
+    site: North
+    telescope: LSTN-design
+    use_plain_output_path: true
+  integration_tests:
+  - output_file: fadc_pulse_shape_1.0.0_North_LSTN-design.pdf
+  test_name: fadc_pulse_shape
+schema_name: application_workflow.metaschema
+schema_version: 0.4.0
