--- a/tests/integration_tests/config/plot_tabular_data_for_model_parameter_atmospheric_density_all.yml
+++ b/tests/integration_tests/config/plot_tabular_data_for_model_parameter_atmospheric_density_all.yml
@@ -1,17 +1,16 @@
 ---
-CTA_SIMPIPE:
-  APPLICATIONS:
-  - APPLICATION: simtools-plot-tabular-data-for-model-parameter
-    TEST_NAME: atmospheric_profile_all
-    CONFIGURATION:
-      PARAMETER: atmospheric_profile
-      PARAMETER_VERSION: 1.0.0
-      SITE: North
-      PLOT_TYPE: all
-      OUTPUT_PATH: simtools-output
-      USE_PLAIN_OUTPUT_PATH: true
-    INTEGRATION_TESTS:
-    - OUTPUT_FILE: atmospheric_profile_1.0.0_North_refractive_index_vs_altitude.png
-    - OUTPUT_FILE: atmospheric_profile_1.0.0_North_refractive_index_vs_altitude.pdf
-SCHEMA_NAME: application_workflow.metaschema
-SCHEMA_VERSION: 0.3.0
+applications:
+- application: simtools-plot-tabular-data-for-model-parameter
+  configuration:
+    output_path: simtools-output
+    parameter: atmospheric_profile
+    parameter_version: 1.0.0
+    plot_type: all
+    site: North
+    use_plain_output_path: true
+  integration_tests:
+  - output_file: atmospheric_profile_1.0.0_North_refractive_index_vs_altitude.png
+  - output_file: atmospheric_profile_1.0.0_North_refractive_index_vs_altitude.pdf
+  test_name: atmospheric_profile_all
+schema_name: application_workflow.metaschema
+schema_version: 0.4.0
