Dont run tests when changes docs

--- a/.github/workflows/CI-integrationtests.yml
+++ b/.github/workflows/CI-integrationtests.yml
@@ -6,6 +6,8 @@ on:
   workflow_dispatch:
   pull_request:
     types: [opened, synchronize]
+    paths-ignore:
+      - 'docs/**'
   schedule:
     - cron: "0 0 * * *"
   release:
